--- a/plugins/camera_saver/CMakeLists.txt
+++ b/plugins/camera_saver/CMakeLists.txt
@@ -48,3 +48,6 @@ target_link_libraries(CameraSaver
     PRIVATE gz-plugin${GZ_PLUGIN_VER}::gz-plugin${GZ_PLUGIN_VER}
     PRIVATE gz-sim${GZ_SIM_VER}::gz-sim${GZ_SIM_VER}
     PRIVATE ${OpenCV_LIBS})
+
+install(TARGETS ${PROJECT_NAME}
+        LIBRARY DESTINATION lib)
