--- a/plugins/photo_shoot/CMakeLists.txt
+++ b/plugins/photo_shoot/CMakeLists.txt
@@ -54,3 +54,6 @@ target_link_libraries(${PROJECT_NAME}
     PRIVATE gz-sim${GZ_SIM_VER}::gz-sim${GZ_SIM_VER}
     PRIVATE ${OpenCV_LIBS}
 )
+
+install(TARGETS ${PROJECT_NAME}
+        LIBRARY DESTINATION lib)
